--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div class="message">
         <button class="message__btn button-birthday hidden">click me</button>
      <p class="message__text"></p> 
+     <p class="message__tex2"></p> 
         </div>
      <button class="reload">reload</button>
 
      <div class="absolute left-0 bottom-0 overflow-hidden w-full">
-        <img class="rounded-full bg-white w-24 w-24 gif-animation" src="racconn_2.gif" alt="">
+        <img class="rounded-full bg-white w-40 w-40 gif-animation" src="racconn_2.gif" alt="">
      </div>
 
     <audio id="birthday-sound" preload="auto">
